--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,5 +24,8 @@
             </intent-filter>
         </activity>
 
+        <activity
+            android:name=".ui.article.ArticleActivity"
+            android:screenOrientation="portrait" />
     </application>
 </manifest>
