--- a/deps.gradle
+++ b/deps.gradle
@@ -11,11 +11,15 @@ ext {
             androidxCompat          : "1.0.2",
             androidxCore            : "1.0.2",
             androidxConstraint      : "1.1.3",
+            transition              : "1.2.0-rc01",
             anko                    : "0.10.8",
             dialog                  : "3.1.1",
             junitApi                : "5.5.2",
             runtime                 : "5.5.2",
-            multidex                : "2.0.1"
+            multidex                : "2.0.1",
+            support                 : "1.0.0",
+            supportV7               : "28.0.0",
+            testEspresso            : "3.0.2"
     ]
 
     retrofitLibs = [
@@ -53,7 +57,8 @@ ext {
             viewModel         : "androidx.lifecycle:lifecycle-viewmodel-ktx:$versions.androidxViewModel",
             appcompat         : "androidx.appcompat:appcompat:$versions.androidxCompat",
             coreKtx           : "androidx.core:core-ktx:$versions.androidxCore",
-            androidxConstraint: "androidx.constraintlayout:constraintlayout:$versions.androidxConstraint"
+            androidxConstraint: "androidx.constraintlayout:constraintlayout:$versions.androidxConstraint",
+            transition        : "androidx.transition:transition:$versions.transition"
     ]
 
     ankoLibs = [
@@ -66,5 +71,14 @@ ext {
     ]
     multidexLibs = [
             multidex: "androidx.multidex:multidex:$versions.multidex"
+    ]
+
+    supportLibs = [
+            appCompat   : "androidx.appcompat:appcompat:${versions.support}",
+            design      : "com.google.android.material:material:${versions.support}",
+            v4          : "androidx.legacy:legacy-support-v4:${versions.support}",
+            v7          : "com.android.support:appcompat-v7:${versions.supportV7}",
+            testRunner  : "com.android.support.test:runner:$versions.support",
+            testEspresso: "com.android.support.test.espresso:espresso-core:$versions.testespresso"
     ]
 }
