--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,9 +23,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".ui.article.ArticleActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ui.webview.WebViewActivity"
             android:screenOrientation="portrait" />
     </application>
 </manifest>
